--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 brapi.api.token=6trn4ZVWsH8pPCHPt8YvDy
+
+spring.cache.type=simple
