--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,25 @@
-spring.application.name=microsservico
-# URL de conexão JDBC
-spring.datasource.url=jdbc:mysql://localhost:3306/acoes_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# Nome único para o serviço
+spring.application.name=acoes-service
 
+# --- Conexão com Banco de Dados ---
+spring.datasource.url=jdbc:mysql://localhost:3306/acoes_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=senha123
 
-# Configurações do JPA/Hibernate
+# --- Configurações do JPA/Hibernate ---
+# Use 'validate' ou 'none' em produção e adote Flyway/Liquibase
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# --- Cache ---
+spring.cache.type=simple
+
+# --- Configurações de APIs Externas ---
 brapi.api.token=6trn4ZVWsH8pPCHPt8YvDy
 
-spring.cache.type=simple
+# --- Configuração do Cliente Feign (URL do serviço que este aqui vai chamar) ---
+email.service.url=http://localhost:8090
+
+# Define qual Bean de Função será o handler principal da Lambda
+spring.cloud.function.definition=verificarPrecos
